style updates and language section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,15 @@
                     <li>JavaScript</li>
                     <li>React</li>
                 </ul>
-            </div>
         </div>
+        <div class="tech-skill">
+            <h3>Languages:</h3>
+            <ul>
+                <li>Ukrainian - Native</li>
+                <li>Polish - B2</li>
+                <li>Engish - B2/C1</li>
+            </ul>
+    </div>
     </div>
     <fr></fr>
     </div>
@@ -146,7 +153,7 @@
     </div>
     <footer class="contacts" id="contacts">
         <h2>Thank you for your attantion!</h2>
-        <p>Please, feel free to contact me on: <br>
+        <p>Please, feel free to contact me: <br>
             <a href="https://www.linkedin.com/in/oleksandr-logvyn/">LinkedIn</a> <br>
             <a href="mailto:logvyn.o@gmail.com">logvyn.o@gmail.com</a>
         </p>
