small text corrections

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             translation.
             Started my IT journey with Diebold Nixdorf as customer support. Had experience
             supporting hardware and software. Got experience with log analysis, also got
-            experience as a trainer. Right now work in DLA piper as Service Desk Analyst,
+            experience as a trainer. Right now work in DLA piper as Service Desk 2nd Line Analyst,
             assisting people with their issue, analysis, got experience working with regestry and
             administrating users in AD, Azure and powershell.
             Right now I am interested in self development and get more knowledge and
@@ -49,16 +49,23 @@
                     <li>Azure Fundamentals</li>
                     <li>Troubleshooting</li>
                     <li>MS office</li>
-                </ul>
-            </div>
-            <div class="tech-skill">
-                <h3>Front-end skills:</h3>
-                <ul>
                     <li>HTML 5</li>
                     <li>CSS</li>
                     <li>SCSS</li>
                     <li>JavaScript</li>
                     <li>React</li>
+                </ul>
+            </div>
+            <div class="tech-skill">
+                <h3>Soft skills:</h3>
+                <ul>
+                    <li>Teamwork</li>
+                    <li>Open-mindedness</li>
+                    <li>Critical thinking </li>
+                    <li>Quick learner</li>
+                    <li>Empathy</li>
+                    <li>Adaptability</li>
+                    <li>Flexibility</li>
                 </ul>
         </div>
         <div class="tech-skill">
