contact details updated

--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
         <div></div>
     </div>
     <footer class="contacts" id="contacts">
-        <h2>Thank you for your attantion!</h2>
-        <p>Please, feel free to contact me: <br>
-            <a href="https://www.linkedin.com/in/oleksandr-logvyn/">LinkedIn</a> <br>
-            <a href="mailto:logvyn.o@gmail.com">logvyn.o@gmail.com</a>
+        <h2>Contact details:</h2>
+        
+        <p>Please, feel free to contact me:<br>
+            <a href="https://www.linkedin.com/in/oleksandr-logvyn/">LinkedIn: Oleksandr Logvyn</a> <br>
+            <a href="mailto:logvyn.o@gmail.com">Email: logvyn.o@gmail.com</a>
         </p>
     </footer>
 </body>
