--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="about-me" id="about-me">
         <div class="photo-div"><img src="./assets/photo/Olek.png" alt="Photo" class="photo"></div>
-        <div class="few-words-about-me">Hi,
+        <div class="few-words-about-me">
             Hey
             My name is Alex. I am from Ukraine, currently live in Poland for the last 8 years. Studied in Rzeszow
             in University of Information Technology on English philology with Chinese
