--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <li>SCSS</li>
                     <li>JavaScript</li>
                     <li>React</li>
+                    <li>PowerShell</li>
                 </ul>
             </div>
             <div class="tech-skill">
